--- a/frontend/package.json
+++ b/frontend/package.json
@@ -127,7 +127,7 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.3",
-    "react-grid-layout": "^1.2.4",
+    "react-grid-layout": "1.4.2",
     "react-helmet-async": "1.2.2",
     "react-hotkeys-hook": "^3.4.0",
     "react-i18next": "11.15.3",
@@ -183,7 +183,7 @@
     "docdash": "^1.2.0",
     "enzyme": "^3.11.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-jsdoc": "^48.2.12",
+    "eslint-plugin-jsdoc": "^37.9.7",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html2canvas": "^1.3.2",
@@ -197,7 +197,7 @@
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^2.3.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.1",
     "react-test-renderer": "17.0.2",
     "rollup": "^2.62.0",
     "rollup-plugin-cleanup": "^3.2.1",
