--- a/server/src/main/resources/application-prod.yml
+++ b/server/src/main/resources/application-prod.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
+    driver-class-name: org.postgresql.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:h2:file:./bin/h2/datart.demo;MODE=MySQL;DATABASE_TO_LOWER=TRUE;IGNORECASE=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE;IFEXISTS=TRUE
-    username:
-    password:
+    url: jdbc:postgresql://120.26.61.213:5432/datart
+    username: postgres
+    password: P=4vVT2D!nD)G?z3
 
 server:
   port: 8080
