--- a/server/src/main/resources/application-prod.yml
+++ b/server/src/main/resources/application-prod.yml
@@ -1,10 +1,13 @@
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:postgresql://120.26.61.213:5432/datart
-    username: postgres
+    url: jdbc:mysql://120.26.61.213:3306/datart?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true
+    username: root
     password: P=4vVT2D!nD)G?z3
+#    driver-class-name: org.postgresql.Driver
+#    url: jdbc:postgresql://120.26.61.213:5432/datart
+#    username: postgres
+#    password: P=4vVT2D!nD)G?z3
 
 server:
   port: 8080
